--- a/II_12_Proyecto_Practico/css/estilos.css
+++ b/II_12_Proyecto_Practico/css/estilos.css
@@ -37,6 +37,8 @@ nav {
   color: rgb(243, 55, 132);
   position: sticky;
   position: -webkit-sticky;
+  top: 0px;
+  z-index: 100;
 }
 
 nav div {
@@ -48,56 +50,103 @@ header {
   text-align: center;
 }
 
+.nav-item{
+  display: inline-block;
+  padding: 10px;
+  width: 20%;
+}
+
 /* Fondo de la cabecera */
 header img {
   opacity: 0.7;
+  width: 100%;
 }
 
 
 /* Call for action para Comprar */
 aside {
-
+  background-color: #121867;
+  color: rgb(243, 55, 132);
+  width: 200px;
+  border-radius: 10px;
+  position: absolute;
+  right: 15%;
+  top: 30%;
 }
 
 aside a {
+  color: white;
+  background-color: rgb(243, 55, 132);
+  text-decoration: none;
 }
 
 aside h3 {
+  margin: 20px 0px;
 }
 
 /* Elemento principal con las 3 cards */
 main {
+  margin: 0px auto;
+  width: 80%;
 }
 main h1 {
+  text-align: center;
 }
 
 /* Línea separados de elementos */
 main h1::after,
 main:after {
+  background-color: rgb(243, 55, 132);
+  display: block;
+  content: " ";
+  height: 2px;
+  width: 30%;
+  margin: 0px auto;
+  margin-top: 30px;
+
 }
 
 /* Estilos para la zona de las cards */
 .cards {
+  overflow-y: auto;
 }
 .cards .card {
+  float: left;
+  padding: 20px;
+  text-align: center;
+  width: 33%;
 }
 
 .cards .card img {
+  width: 50%;
 }
 
 
 /* Sección con la botella y los tres párrafos descriptivos */
 .bottle {
+  margin: 30px auto;
+  overflow-y: auto;
+  width: 70%;
 }
 
 .bottle img {
+  float: left;
+  margin-left: 10%;
+  width: 20%;
 }
 
 .bottle div {
+  float: left;
+  text-align: justify;
+  margin-top: 20px;
+  width: 50%;
 }
 
 /* Mostrarmos la primera letra con un borde diferente */
 .bottle div::first-letter {
+  border-right: 1px solid #121867;
+  border-bottom: 1px solid #121867;
+  color: rgb(243, 55, 132);
 }
 
 
